[package]
name = "tokenizer"
authors = ["Engineering <engineering@ambientcrypto.ai"]
version = "0.2.6"
repository = "https://github.com/ambient-xyz/tokenizer"
license = "Proprietary"
homepage = "https://ambient.xyz"
edition = "2024"

[features]
default = ["qwen-2.5-0.5b-instruct"]
"qwen-2.5-0.5b-instruct" = []

[dependencies]
async-threadpool = {git = "https://github.com/ambient-xyz/async-threadpool"}
minijinja = { version = "2", features = ["builtins"] }
minijinja-contrib = { version = "2", features = ["pycompat"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
sha2 = "0.10"
thiserror = "2.0.16"
tokenizers = { version = "0.22.1", default-features = false, features = ["onig"] }
tokio = { version = "1", features = ["rt", "process", "io-util", "fs", "sync", "macros"] }
